# Squoosher

./: .gitignore  CMakeLists.txt  ConversionQueue.cpp  ConversionQueue.h  ConversionThread.cpp  ConversionThread.h  Dockerfile  Encoder.cpp  Encoder.h  FileDropTarget.cpp  FileDropTarget.h  ImageController.cpp  ImageController.h  ItemPanel.cpp  ItemPanel.h  MainFrame.cpp  MainFrame.h  Squoosh.cpp  Squoosh.fbp  Squoosh.h  SquooshApp.cpp  SquooshApp.h  build.sh  main.cpp  preprocess.sh
imageio/: CMakeLists.txt  defs.h  image_enc.c  imageio_util.c
res/: convert.png.h  open.png.h  squoosher.desktop  squoosher.png.h
webputil/: CMakeLists.txt  WebP.cpp  WebP.h
webputil/imageio/: imageio_util.c  webpdec.c
